src/tui/snapshots/yubitui__tui__oath__tests__add_account_screen_initial.snap
---
source: src/tui/oath.rs
expression: app.backend()
---
"                                Add OATH Account                                "
"Step 1/5: Issuer                                                                "
"                                                                                "
"Enter issuer name (e.g., GitHub, Google):                                       "
"> _                                                                             "
"                                                                                "
"  Tab  Focus   Ctrl+P  Palette   q  Quit                                        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
