src/tui/snapshots/yubitui__tui__oath__tests__add_account_screen_step_navigation.snap
---
source: src/tui/oath.rs
expression: app.backend()
---
"                                Add OATH Account                                "
"Step 2/5: Account Name                                                          "
"                                                                                "
"Enter account name (e.g., user@example.com):                                    "
"> _                                                                             "
"                                                                                "
"  Tab  Focus   Ctrl+P  Palette                                                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
