src/tui/snapshots/yubitui__tui__oath__tests__oath_change_password_screen.snap
---
source: src/tui/oath.rs
expression: app.backend()
---
"                              Change OATH Password                              "
"                                                                                "
"> Current password:                                                             "
"  _                                                                             "
"                                                                                "
"  New password:                                                                 "
"  _                                                                             "
"                                                                                "
"  Confirm new password:                                                         "
"  _                                                                             "
"                                                                                "
"  Tab  Focus   Ctrl+P  Palette                                                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
