src/tui/snapshots/yubitui__tui__oath__tests__oath_navigate_down.snap
---
source: src/tui/oath.rs
expression: stable_snapshot(&app.backend())
---
"                                OATH Credentials                                "
"                                                                                "
"  Name                              Code      Type                              "
"  ──────────────────────────────  ────────  ──────                              "
"  > GitHub                            123456  [TOTP]                            "
"    Google                            789012  [TOTP]                            "
"    AWS                             [press Enter]  [HOTP]                       "
"                                                                                "
"  TOTP refreshes in <countdown>  [<bar>]                                 "
"                                                                                "
"  Tab  Focus   Ctrl+P  Palette                                                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
