src/tui/snapshots/yubitui__tui__oath__tests__oath_no_credentials.snap
---
source: src/tui/oath.rs
expression: app.backend()
---
"                                OATH Credentials                                "
"                                                                                "
"No OATH credentials stored. Press 'a' to add one.                               "
"                                                                                "
"  Tab  Focus   Ctrl+P  Palette   q  Quit                                        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
