src/tui/snapshots/yubitui__tui__oath__tests__oath_screen_no_yubikey.snap
---
source: src/tui/oath.rs
expression: app.backend()
---
"                                OATH Credentials                                "
"                                                                                "
"No YubiKey detected. Insert your YubiKey and press R to refresh.                "
"                                                                                "
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃                                 Refresh (R)                                  ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"                                                                                "
"  Tab  Focus   Ctrl+P  Palette                                                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
